--- a/ProjectDiamondShop/Views/Introduce/Emerald.cshtml
+++ b/ProjectDiamondShop/Views/Introduce/Emerald.cshtml
@@ -218,14 +218,15 @@
                         <li><a href="@Url.Action("About", "Home")">About</a> </li>
                         <li><a href="@Url.Action("Contact", "Home")">Contact US</a> </li>
                         <li><a href="#">Blog</a> </li>
-                        @if (Session["IsAuthenticated"] != null && (bool)Session["IsAuthenticated"])
-                        {
-                            <li><a href="@Url.Action("Logout", "Login")">Logout</a></li>
-                        }
-                        else
-                        {
-                            <li><a href="@Url.Action("Index", "SignUp")">Sign Up</a></li>
-                            <li><a href="@Url.Action("Index", "Login")">Login</a></li>
+                        @{ if (User.Identity.IsAuthenticated)
+                            {
+                                <li><a href="#">Logout</a></li>
+                            }
+                            else
+                            {
+                                <li><a href="@Url.Action("Index", "SignUp")">Sign Up</a> </li>
+                                <li><a href="#">Login</a> </li>
+                            }
                         }
                     </ul>
                 </div>
@@ -233,7 +234,7 @@
         </div>
 
         <div class="spacer"></div>
-        <h2 class="text-center">Emerald Diamond Story</h2>
+        <h2 class="text-center" style="margin-top: 48px;">Emerald Diamond Story</h2>
 
         <div class="container center">
             <div id="myCarousel" class="carousel slide" data-ride="carousel">
@@ -248,28 +249,28 @@
                     <div class="item active">
                         <div class="slide-wrapper">
                             <a href="#">
-                                <img src="~/Image/SlideDiamond/emerald.jpg" alt="Destination 1" style="width: 100%; height: 300px" />
+                                <img src="~/Image/SlideDiamond/emeraldring.jpg" alt="Destination 1" style="width: 100%;" />
                             </a>
                         </div>
                     </div>
                     <div class="item">
                         <div class="slide-wrapper">
                             <a href="#">
-                                <img src="~/Image/SlideDiamond/emerald1.png" alt="Destination 2" style="width: 100%; height: 300px" />
+                                <img src="~/Image/SlideDiamond/emeraldring1.jpg" alt="Destination 2" style="width: 100%;" />
                             </a>
                         </div>
                     </div>
                     <div class="item">
                         <div class="slide-wrapper">
                             <a href="#">
-                                <img src="~/Image/SlideDiamond/emerald2.jpg" alt="Destination 3" style="width: 100%; height: 300px" />
+                                <img src="~/Image/SlideDiamond/emeraldring2.jpg" alt="Destination 3" style="width: 100%;" />
                             </a>
                         </div>
                     </div>
                     <div class="item">
                         <div class="slide-wrapper">
                             <a href="#">
-                                <img src="~/Image/SlideDiamond/emerald4.jpg" alt="Destination 4" style="width: 100%; height: 300px">
+                                <img src="~/Image/SlideDiamond/emeraldring3.jpg" alt="Destination 4" style="width: 100%;">
                             </a>
                         </div>
                     </div>
@@ -289,7 +290,7 @@
         <!--Code thêm phần bài viết ở đây-->
         <div class="container center ">
             <div class="row ">
-                <p class="decription">
+                <p class="decription justify">
                     Emerald cut diamonds typically have of 57 facets and are distinguished by their elongated, rectangular shape and unique step cuts, creating a ‘hall of mirrors effect.
                     While generally not as brilliant they usually appear larger than other shapes of the same carat weight.
                     Their large table can make even tiny flaws stand out, so buyers should be wary of visible inclusions.
@@ -300,22 +301,22 @@
                     For example, you can get a great one carat emeral cut for $3,300.
                 </p>
                 <h2 class="wp-block-heading" id="What-is-an-Emerald-Cut-Diamond">What Is An Emerald Cut Diamond</h2>
-                <p>
+                <p class="decription justify">
                     The emerald cut diamond flaunts an elongated, rectangular shape and chiseled step cuts, with straight linear facets—usually arranged parallelly down the stone.
                     To add stability and prevent fractures, the corners of an emerald cut diamond are usually cropped.
                 </p>
-                <p>
+                <p class="decription justify">
                     The emerald cut diamond provides for deep clarity and a large surface table.
                     Through its long step cuts, the diamond offers abundant reflections both of white and colored light.
                     Emerald cuts are more prominent in rectangles but are available in squares as well.
                 </p>
-                <p>
+                <p class="decription justify">
                     A popular choice for those wanting a larger stone without a high price point, an emerald cut diamond usually appears bigger than other shaped diamonds in the same carat weight.
                     Emerald cuts are also a top choice for celebrities.
                     As <a href="https://www.hellomagazine.com/brides/20210217107101/paris-hilton-has-announced-that-she-is-engaged/" data-wpel-link="external" target="_blank" rel="external noopener">Hello Magazine</a>, a top magazine covering celebrities, reports celebs like Paris Hilton make emerald cuts their top choice.
                 </p>
                 <h2 class="wp-block-heading" id="Emerald-Cut-Diamond---Length-to-Width-Ratio">Emerald Cut Diamond – Length to Width Ratio</h2>
-                <p>
+                <p class="decription justify">
                     A diamond’s length to width ratio tells how squared or elongated its shape is. The ratio is calculated by dividing the length of the diamond by the width.
                     For example, if a diamond’s length is 6mm and its width is 4mm, the length to width ratio is 1.50 – rectangular shape.
                     On the opposite side, a length to width ratio close to 1 looks like a square, because the length and width of the diamond are similar.
@@ -327,18 +328,18 @@
                     <img src="~/Image/Introlmage/emerald.png" alt="Destination 4" style="width: 100%;margin:auto;" />
                 </p>
                 <h2 class="wp-block-heading">Comparing Size and Carat Weight</h2>
-                <p>
+                <p class="decription justify">
                     Take a look at the size differences between different carat weigh of an emerald cut.
                     Keep in mind that those are average measurements as every emerald cut diamond is slightly different (in measurements and L:W ratio).
                     <img src="~/Image/Introlmage/emerald1.jpg" alt="Destination 4" style="width: 80%;margin:auto;" />
                 </p>
                 <h2 class="wp-block-heading" id="Emerald-Cut-Diamond---Clarity">Emerald Cut Diamond – Clarity</h2>
-                <p>
+                <p class="decription justify">
                     The <a href="https://www.diamonds.pro/education/diamond-depth-and-table/" data-wpel-link="internal"><strong>table</strong></a> (top surface area) of an emerald cut is like a clear unobstructed window into the center of the stone. Any inclusions found in the middle will be clearly visible. Because both the <b>pavilion</b> (the bottom slanted portion of the diamond) and <b>crown</b> (the upper diamond resting atop the girdle) are comparatively shallow, step cut stones are generally not as bright and never as fiery as brilliant cut stones.
                     Rather, they accentuate a diamond’s clarity, as even the slightest flaw would be highly visible.
                 </p>
                 <p>In other words, blemishes in an emerald cut diamond will be more noticeable than in a round cut diamond or cushion cut diamond.</p>
-                <p>
+                <p class="decription justify">
                     The GIA <a href="https://www.diamonds.pro/education/clarity/" data-wpel-link="internal">diamond clarity scale</a> ranges from best (void of inclusions) to worst (easily noticeable inclusions).
                     Their designations include:
                 </p>
@@ -353,7 +354,7 @@
                     <li> <b>I1 </b>– Inclusions 1</li>
                     <li> <b>I2 </b>– Inclusions 2</li>
                 </ul>
-                <p>
+                <p class="decription justify">
                     <b>We recommend a VS2 clarity for the best value</b>.
                     SI2 and SI1 clarity grades are generally not recommended with step cuts such as asscher cuts and emerald cuts.
                     Step cuts aren’t cut for their brilliance, so there’s no scattering of light to hide inclusions.
